# dalek-manager-lib

./: .gitignore  .gitmodules  .kateproject  CMakeLists.txt  Doxyfile.in  README.md  design.md  todo-list.md
arm-frc-linux-gnueabi/: libboost_filesystem.so.1.60.0  libboost_log_setup.so.1.60.0
cmake/: CppLint.cmake  CppTest.cmake  WindowsFRC.cmake  cpplint.py
cmake/Modules/: FindWPILib.cmake
include/: ProjectConfig.h.in
src/: ProjectConfig.h  ProjectConfig.h.in
src/Config/: CMakeLists.txt  Config.cpp  ConfigContext.cpp  ConfigContext.h  EnumSetting.h  HybridNode.h  InvalidManifestError.h  MapNode.h  Node.cpp  Node.h  OrphanSubsystemError.h  OrphanSystemError.h  Port.cpp  Port.h  PortGroup.cpp  PortGroup.h  PortSpace.cpp  PortSpace.h  RootSystem.cpp  RootSystem.h  Setting.cpp  Setting.h  SettingGroup.h  SettingTypeMismatchError.h  SettingWrapper.h  Subsystem.cpp  Subsystem.h  System.cpp  System.h  TreeNode.cpp  TreeNode.h  UnavailablePortError.cpp  UnavailablePortError.h
src/Log/: CMakeLists.txt  Log.cpp  LogAttributes.h  LogData.cpp  LogData.h  LogObject.cpp  LogObject.h  MessageData.cpp  MessageData.h  ProjectInfo.cpp  ProjectInfo.h  SimpleSink.impl  StreamHandle.cpp  StreamHandle.h  SystemData.cpp  SystemData.h  TextLog.cpp  TextLog.h  TextLogListener.h
src/MQTT/: CMakeLists.txt
src/Utility/: CMakeLists.txt  ConcurrentObject.h  FunkyGet.h  FunkyPoll.h  Gettable.h  OnTimeoutPolicy.cpp  OnTimeoutPolicy.h  Pollable.h  Reference.h  SetValue.h  Settable.h  TimeoutUpdater.cpp  TimeoutUpdater.h  UpdateStore.cpp  UpdateStore.h  UpdateThread.cpp  UpdateThread.h  Updateable.cpp  Updateable.h  Valuable.h  ValueStore.h
src/WPILib/: GenericTrigger.cpp  GenericTrigger.h  WPISystem.h
test/LogAttributes/: test.cmake  test.cpp
test/TextLog/: test.cmake  test.cpp
tests/: TestFunkyPoll.cpp  TestPortGroup.cpp  TestSettingGroup.cpp  TestSimpleSink.cpp  TestSubsystem.cpp  TestTextLog.cpp  TestUpdateThread.cpp  TestUpdateable.cpp  TestValueStore.cpp
